﻿2006-12-08  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/base64.cpp, src/base64.h, src/resources/mapreader.cpp:
	Downgraded to base64 codec from PHP 3 to resolve licensing issues.

2006-12-06  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev, tmw.cbp: Updated project files.

2006-12-06  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/beinghandler.cpp: Fixed crashs when changing equipment.
	* data/graphics/tiles/desert1.png, data/graphics/tiles/desert2.png:
	More tiling related fixes at the cliffs.

2006-12-06  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/item_amount.cpp: Fixed visibility of item amount window.

2006-12-05  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert1.png: Improved the tiling behavior
	of the cliffs (still not gridless but at least the edges fit
	together in the most common situations)

2006-12-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/engine.h, src/gui/windowcontainer.h,
	src/gui/viewport.cpp, src/gui/gui.cpp, src/gui/gui.h,
	src/gui/debugwindow.cpp, src/gui/inventorywindow.cpp,
	src/gui/viewport.h, src/engine.cpp, src/CMakeLists.txt,
	src/Makefile.am: Introduced a new class Viewport which combines the
	drawing code from Engine with the (rather misplaced) input handling
	from the Gui class. Also, it's a Container itself which should allow
	for extending it to show Guichan widgets on map coordinates.

2006-12-03  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/sound.cpp, src/monster.cpp, src/sound.h,
	src/resources/soundeffect.cpp, src/resources/resourcemanager.cpp:
	Don't try to play empty strings as sounds, and don't return a
	SoundEffect instance when Mix_Chunk loading failed.
	* src/beingmanager.cpp, src/npc.cpp, src/npc.h: Show NPC names.
	* src/game.cpp, src/gui/char_server.cpp, src/gui/window.cpp,
	src/gui/login.cpp, src/gui/char_select.cpp, src/gui/ok_dialog.cpp,
	src/gui/confirm_dialog.cpp, src/gui/ok_dialog.h, src/gui/window.h,