@@ -31,6 +31,7 @@
 
 #include <guichan/actionlistener.hpp>
 
+class Player;
 class LocalPlayer;
 class Network;
 class PlayerBox;
@@ -51,7 +52,7 @@ class CharSelectDialog : public Window, public gcn::ActionListener
                          LockedArray<LocalPlayer*> *charInfo,
                          unsigned char sex);
 
-        void action(const std::string& eventId, gcn::Widget* widget);
+        void action(const std::string &eventId, gcn::Widget *widget);
 
         void updatePlayerInfo();
 
@@ -110,7 +111,12 @@ class CharCreateDialog : public Window, public gcn::ActionListener
         CharCreateDialog(Window *parent, int slot, Network *network,
                          unsigned char sex);
 
-        void action(const std::string& eventId, gcn::Widget* widget);
+        /**
+         * Destructor.
+         */
+        ~CharCreateDialog();
+
+        void action(const std::string &eventId, gcn::Widget *widget);
 
         std::string getName();
 
@@ -127,6 +133,7 @@ class CharCreateDialog : public Window, public gcn::ActionListener
         gcn::Button *mCreateButton;
         gcn::Button *mCancelButton;
 
+        Player *mPlayer;
         PlayerBox *mPlayerBox;
 
         int mSlot;
