@@ -1,4 +1,13 @@
-﻿2006-12-08  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+﻿2006-12-09  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+
+	* src/sprite.h, src/gui/playerbox.h, src/gui/char_select.cpp,
+	src/gui/playerbox.cpp, src/gui/passwordfield.h,src/gui/char_select.h,
+	src/gui/textfield.h, src/main.cpp, src/being.cpp, src/player.h,
+	src/floor_item.h, src/being.h: Use new animation system in character
+	selection/creation. Shows equipment and allowed for some cleanup. Had
+	a bit of help from the patch by VictorSan.
+
+2006-12-08  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/base64.cpp, src/base64.h, src/resources/mapreader.cpp:
 	Downgraded to base64 codec from PHP 3 to resolve licensing issues.
